--- a/src/mainboard/google/gru/Kconfig
+++ b/src/mainboard/google/gru/Kconfig
@@ -39,9 +39,9 @@ config BOARD_SPECIFIC_OPTIONS
 	select SPI_FLASH_WINBOND
 
 config CHROMEOS
-	select CHROMEOS_VBNV_FLASH
 	select EC_SOFTWARE_SYNC
 	select SPI_TPM
+	select VBOOT_VBNV_FLASH
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
