--- a/src/mainboard/google/nyan_big/Kconfig
+++ b/src/mainboard/google/nyan_big/Kconfig
@@ -34,7 +34,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 
 config CHROMEOS
 	select EC_SOFTWARE_SYNC
-	select CHROMEOS_VBNV_EC
+	select VBOOT_VBNV_EC
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
