--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -34,10 +34,10 @@ config BOARD_SPECIFIC_OPTIONS
 	select SPI_FLASH
 
 config CHROMEOS
-	select CHROMEOS_VBNV_FLASH
 	select EC_SOFTWARE_SYNC
 	select VBOOT_EC_SLOW_UPDATE
 	select VBOOT_OPROM_MATTERS
+	select VBOOT_VBNV_FLASH
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
