--- a/src/mainboard/google/veyron_danger/Kconfig
+++ b/src/mainboard/google/veyron_danger/Kconfig
@@ -33,8 +33,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select MAINBOARD_HAS_CHROMEOS
 
 config CHROMEOS
-	select CHROMEOS_VBNV_FLASH
 	select PHYSICAL_REC_SWITCH
+	select VBOOT_VBNV_FLASH
 
 config MAINBOARD_DIR
 	string
