--- a/src/mainboard/intel/strago/Kconfig
+++ b/src/mainboard/intel/strago/Kconfig
@@ -16,10 +16,10 @@ config BOARD_SPECIFIC_OPTIONS
 	select PCIEXP_L1_SUB_STATE
 
 config CHROMEOS
-	select LID_SWITCH
-	select CHROMEOS_VBNV_CMOS
 	select EC_SOFTWARE_SYNC
+	select LID_SWITCH
 	select VBOOT_DYNAMIC_WORK_BUFFER
+	select VBOOT_VBNV_CMOS
 	select VIRTUAL_DEV_SWITCH
 
 config DYNAMIC_VNN_SUPPORT
