--- a/src/soc/marvell/bg4cd/Kconfig
+++ b/src/soc/marvell/bg4cd/Kconfig
@@ -17,7 +17,7 @@ config SOC_MARVELL_BG4CD
 	bool
 	default n
 	select ARCH_BOOTBLOCK_ARMV7_M
-	select BOOTBLOCK_CUSTOM if VBOOT_VERIFY_FIRMWARE
+	select BOOTBLOCK_CUSTOM if VBOOT
 	select ARCH_RAMSTAGE_ARMV7
 	select ARCH_ROMSTAGE_ARMV7
 	select ARCH_VERSTAGE_ARMV7_M
