--- a/src/mainboard/google/auron_paine/Kconfig
+++ b/src/mainboard/google/auron_paine/Kconfig
@@ -15,10 +15,10 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select INTEL_INT15
 
 config CHROMEOS
-	select CHROMEOS_VBNV_CMOS
-	select LID_SWITCH
-	select CHROMEOS_RAMOOPS_DYNAMIC
 	select EC_SOFTWARE_SYNC
+	select CHROMEOS_RAMOOPS_DYNAMIC
+	select LID_SWITCH
+	select VBOOT_VBNV_CMOS
 	select VIRTUAL_DEV_SWITCH
 
 config VBOOT_RAMSTAGE_INDEX
