--- a/src/mainboard/google/link/Kconfig
+++ b/src/mainboard/google/link/Kconfig
@@ -17,8 +17,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select MAINBOARD_HAS_NATIVE_VGA_INIT
 
 config CHROMEOS
-	select CHROMEOS_VBNV_CMOS
 	select LID_SWITCH
+	select VBOOT_VBNV_CMOS
 
 config MAINBOARD_DIR
 	string
