--- a/src/mainboard/google/veyron/Kconfig
+++ b/src/mainboard/google/veyron/Kconfig
@@ -36,8 +36,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SPI_FLASH_WINBOND
 
 config CHROMEOS
-	select CHROMEOS_VBNV_EC
 	select EC_SOFTWARE_SYNC
+	select VBOOT_VBNV_EC
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
