--- a/src/mainboard/google/veyron_romy/Kconfig
+++ b/src/mainboard/google/veyron_romy/Kconfig
@@ -31,8 +31,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SPI_FLASH_WINBOND
 
 config CHROMEOS
-	select CHROMEOS_VBNV_FLASH
 	select PHYSICAL_REC_SWITCH
+	select VBOOT_VBNV_FLASH
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
