--- a/src/mainboard/intel/emeraldlake2/Kconfig
+++ b/src/mainboard/intel/emeraldlake2/Kconfig
@@ -14,7 +14,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	#select MAINBOARD_HAS_CHROMEOS
 
 config CHROMEOS
-	#select CHROMEOS_VBNV_CMOS
+	#select VBOOT_VBNV_CMOS
 
 config MAINBOARD_DIR
 	string
