--- a/src/soc/qualcomm/ipq40xx/Kconfig
+++ b/src/soc/qualcomm/ipq40xx/Kconfig
@@ -14,9 +14,9 @@ config SOC_QC_IPQ40XX
 if SOC_QC_IPQ40XX
 
 config CHROMEOS
-	select CHROMEOS_VBNV_FLASH
-	select SEPARATE_VERSTAGE
 	select RETURN_FROM_VERSTAGE
+	select SEPARATE_VERSTAGE
+	select VBOOT_VBNV_FLASH
 
 config IPQ_QFN_PART
 	bool
