qualcomm/storm: Add required files to enable elog in ramstage
BUG=chrome-os-partner:55639

Change-Id: Ie859ec3ff682e91a4d7d38d3c3cd6badf7385431
Signed-off-by: Furquan Shaikh <furquan@google.com>
Reviewed-on: https://review.coreboot.org/15894
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Tested-by: build bot (Jenkins)

--- a/src/mainboard/google/storm/Makefile.inc
+++ b/src/mainboard/google/storm/Makefile.inc
@@ -37,6 +37,7 @@ ramstage-y += chromeos.c
 ramstage-y += mainboard.c
 ramstage-y += mmu.c
 ramstage-y += reset.c
+ramstage-y += gsbi.c
 
 bootblock-y += memlayout.ld
 romstage-y += memlayout.ld
