google/lars & intel/kunimitsu: Disable EC build
The Chrome EC codebase no longer supports the google/lars and
intel/kunimitsu boards.  Disable the build in those platforms.

Change-Id: Ic4f5a1a34bb19ee31632c1ad8430c30f7154f138
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/15869
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-by: Patrick Georgi <pgeorgi@google.com>
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/src/mainboard/google/lars/Kconfig
+++ b/src/mainboard/google/lars/Kconfig
@@ -9,6 +9,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select EC_GOOGLE_CHROMEEC_LPC
 	select EC_GOOGLE_CHROMEEC_MEC
 	select EC_GOOGLE_CHROMEEC_PD
+	select EC_EXTERNAL_FIRMWARE
 	select EXCLUDE_NATIVE_SD_INTERFACE
 	select HAVE_ACPI_RESUME
 	select HAVE_ACPI_TABLES
@@ -65,14 +66,6 @@ config INCLUDE_NHLT_BLOBS
 	select NHLT_DMIC_2CH
 	select NHLT_MAX98357
 	select NHLT_NAU88L25
-
-config EC_GOOGLE_CHROMEEC_BOARDNAME
-	string
-	default "lars"
-
-config EC_GOOGLE_CHROMEEC_PD_BOARDNAME
-	string
-	default "lars_pd"
 
 config GBB_HWID
 	string
