--- a/src/mainboard/elmex/pcm205400/Kconfig
+++ b/src/mainboard/elmex/pcm205400/Kconfig
@@ -61,14 +61,9 @@ config VGA_BIOS
 	bool
 	default n
 
-#config VGA_BIOS_FILE
-#	string "VGA BIOS path and filename"
-#	depends on VGA_BIOS
-#	default "rom/video/OntarioGenericVbios.bin"
-
 config VGA_BIOS_ID
 	string
-	default "1002,9802"
+	default "1002,9806" # FUSION_G_T56N
 
 config SB800_AHCI_ROM
 	bool
