src/southbridge: Capitalize CPU, RAM and ROM
Change-Id: I01413b9f8b77ecdcb781340f04c2fe9e24810264
Signed-off-by: Elyes HAOUAS <ehaouas@noos.fr>
Reviewed-on: https://review.coreboot.org/15941
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>
Reviewed-by: Tobias Diedrich <ranma+coreboot@tdiedrich.de>

--- a/src/southbridge/amd/cimx/sb800/Kconfig
+++ b/src/southbridge/amd/cimx/sb800/Kconfig
@@ -214,7 +214,7 @@ config SB800_IMC_FAN_CONTROL
 	depends on SB800_IMC_FWM
 	help
 	  Set up the SB800 to use the IMC based Fan controller.  This requires
-	  the IMC rom from AMD.  Configure the registers in devicetree.cb.
+	  the IMC ROM from AMD.  Configure the registers in devicetree.cb.
 
 endchoice
 
