src/Kconfig: Capitalize ROM
Change-Id: I6c090f5adcc46b4e069a156c6b506a76c0aa7cb5
Signed-off-by: Elyes HAOUAS <ehaouas@noos.fr>
Reviewed-on: https://review.coreboot.org/15952
Tested-by: build bot (Jenkins)
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>
Reviewed-by: Omar Pakker
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/Kconfig
+++ b/src/Kconfig
@@ -1189,7 +1189,7 @@ config CBFS_SIZE
 	default ROM_SIZE
 	help
 	  This is the part of the ROM actually managed by CBFS.  Set it to be
-	  equal to the full rom size if that hasn't been overridden by the
+	  equal to the full ROM size if that hasn't been overridden by the
 	  chipset or mainboard.
 
 config CREATE_BOARD_CHECKLIST
