--- a/src/superio/nuvoton/Kconfig
+++ b/src/superio/nuvoton/Kconfig
@@ -32,3 +32,7 @@ config SUPERIO_NUVOTON_NCT5572D
 config SUPERIO_NUVOTON_NCT6779D
 	bool
 	select SUPERIO_NUVOTON_COMMON_ROMSTAGE
+
+config SUPERIO_NUVOTON_NCT6791D
+	bool
+	select SUPERIO_NUVOTON_COMMON_ROMSTAGE
