soc/intel/quark: Enable use of hard reset
Select HAVE_HARD_RESET in the KCONFIG file to enable use of the
hard_reset routine.

TEST=Build and run on Galileo Gen2

Change-Id: Ib11a80b64cf1c55aec24f2576d197da9017b9751
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/15992
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/soc/intel/quark/Kconfig
+++ b/src/soc/intel/quark/Kconfig
@@ -28,8 +28,10 @@ config CPU_SPECIFIC_OPTIONS
 	select ARCH_VERSTAGE_X86_32
 	select BOOTBLOCK_SAVE_BIST_AND_TIMESTAMP
 	select C_ENVIRONMENT_BOOTBLOCK
+	select HAVE_HARD_RESET
 	select REG_SCRIPT
 	select SOC_INTEL_COMMON
+	select SOC_INTEL_COMMON_RESET
 	select SOC_SETS_MSRS
 	select TSC_CONSTANT_RATE
 	select UART_OVERRIDE_REFCLK
