--- a/src/console/Kconfig
+++ b/src/console/Kconfig
@@ -7,6 +7,13 @@ config BOOTBLOCK_CONSOLE
 	help
 	  Use console during the bootblock if supported
 
+config POSTCAR_CONSOLE
+	bool "Enable console output during postcar."
+	depends on POSTCAR_STAGE
+	default n
+	help
+	  Use console during the postcar if supported
+
 config SQUELCH_EARLY_SMP
 	bool "Squelch AP CPUs from early console."
 	default y
