--- a/src/soc/intel/skylake/Makefile.inc
+++ b/src/soc/intel/skylake/Makefile.inc
@@ -14,7 +14,7 @@ bootblock-y += bootblock/cache_as_ram.S
 bootblock-y += bootblock/cpu.c
 bootblock-y += bootblock/pch.c
 bootblock-y += bootblock/systemagent.c
-bootblock-y += bootblock/uart.c
+bootblock-$(CONFIG_UART_DEBUG) += bootblock/uart.c
 bootblock-y += gpio.c
 bootblock-y += monotonic_timer.c
 bootblock-y += pch.c
