mainboard/elmex: Add new board pcm205401
pcm205401 is CPU board equipped with T40R of AMD. We used SeaBIOS and
Windows Embedded Standard 7 to test pcm205401.

In comparison to pcm205400, only VGA PCI ID is changed and board
identifier strings in SMBIOS / DMI.

Change-Id: I6c7e90db84f13ffbf9e629f2b92649895a466155
Signed-off-by: Yuichi Ito <yui.corebt@gmail.com>
Reviewed-on: https://review.coreboot.org/15930
Tested-by: build bot (Jenkins)
Reviewed-by: Kyösti Mälkki <kyosti.malkki@gmail.com>

--- a/src/mainboard/elmex/pcm205400/Kconfig
+++ b/src/mainboard/elmex/pcm205400/Kconfig
@@ -19,6 +19,14 @@ config MAINBOARD_PART_NUMBER
 	string
 	default "pcm205400"
 
+config VGA_BIOS_ID
+	string
+	default "1002,9806" # FUSION_G_T56N
+
+endif # BOARD_ELMEX_PCM205400
+
+if BOARD_ELMEX_PCM205400 || BOARD_ELMEX_PCM205401
+
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select CPU_AMD_AGESA_FAMILY14
@@ -61,12 +69,8 @@ config VGA_BIOS
 	bool
 	default n
 
-config VGA_BIOS_ID
-	string
-	default "1002,9806" # FUSION_G_T56N
-
 config SB800_AHCI_ROM
 	bool
 	default n
 
-endif # BOARD_ELMEX_PCM205400
+endif # BOARD_ELMEX_PCM205400 | BOARD_ELMEX_PCM205401
