util/checklist: Concatinate optional list to complete list
Don't require that the routines in the .optional file be listed in the
.complete data file.  Concatinate the two files when building the
complete symbol list.

TEST=Build and run on Galileo Gen2

Change-Id: I596134e1a19311d357aa0d93cfb33c7ca9801e2e
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/16037
Tested-by: build bot (Jenkins)
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/util/checklist/Makefile.inc
+++ b/util/checklist/Makefile.inc
@@ -98,11 +98,13 @@ ifeq ($(CONFIG_CREATE_BOARD_CHECKLIST),y)
 #
 %.expected: %.symbol_table
 	cp $(CONFIG_CHECKLIST_DATA_FILE_LOCATION)/$(basename $(*F))_complete.dat $@.tmp
+	cat $(CONFIG_CHECKLIST_DATA_FILE_LOCATION)/$(basename $(*F))_optional.dat >> $@.tmp
 	# If no separate verstage, combine verstage and romstage routines into a single list
 	if [ "$(*F)" = "romstage" ]; then \
 	  if [ ! -e $(*D)/verstage.elf ]; then \
 	    if [ ! -e $(*D)/postcar.elf ]; then \
 	      cat $(CONFIG_CHECKLIST_DATA_FILE_LOCATION)/verstage_complete.dat >> $@.tmp; \
+	      cat $(CONFIG_CHECKLIST_DATA_FILE_LOCATION)/verstage_optional.dat >> $@.tmp; \
 	    fi; \
 	  fi; \
 	fi
