util/checklist: Process .debug files before .elf files
Ensure that the output file is created by processing the .debug files
before the .elf files.

TEST=Build and run on Galileo Gen2

Change-Id: Ief8d774249c9d8eb313f3d10f04d7e4f2e3cf491
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/16041
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/util/checklist/Makefile.inc
+++ b/util/checklist/Makefile.inc
@@ -59,8 +59,8 @@ ifeq ($(CONFIG_CREATE_BOARD_CHECKLIST),y)
 # Extract the symbol table from the image
 #
 %.symbol_table: %.elf %.debug
-	$(NM_$(class)) $< > $@
-	$(NM_$(class)) $(*D)/$(*F).debug >> $@
+	$(NM_$(class)) $(*D)/$(*F).debug > $@
+	$(NM_$(class)) $< >> $@
 
 #
 # All symbols in the image
