util/checklist: Place tables in proper boot order
during the boot, romstage occurs before postchar which is before
ramstage.  Place the tables in the proper boot order when generating
the final webpage.

TEST=Build and run on Galileo Gen2

Change-Id: I5df3ceb797aced58fe5ea3d10d78254a27341e47
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/16042
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/util/checklist/Makefile.inc
+++ b/util/checklist/Makefile.inc
@@ -225,10 +225,11 @@ endif
 ifeq ($(CONFIG_SEPARATE_VERSTAGE),y)
 html_table_files += $(objcbfs)/verstage.html
 endif
+html_table_files += $(objcbfs)/romstage.html
 ifeq ($(CONFIG_POSTCAR_STAGE),y)
 html_table_files += $(objcbfs)/postcar.html
 endif
-html_table_files += $(objcbfs)/romstage.html $(objcbfs)/ramstage.html
+html_table_files += $(objcbfs)/ramstage.html
 
 #
 # Create a list with each file on a separate line
